# cotyledon

./: Cargo.toml  config.toml  readme.md
migrations/: 1_init.sql  1_user.sql  2_post.sql  3_tags.sql
src/: app.rs  auth.rs  authentication.rs  config.rs  main.rs  model.rs  param.rs  protected.rs  public.rs  template.rs  users.rs
src/routes/: auth.rs  mod.rs  protected.rs  public.rs
templates/: dash.html  home.html  login.html  post.html  post_fragment.html  protected.html  register.html  user.html
